--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ a:visited {
     grid-template:
       [header-left] "head main" 100px [header-right]
       [main-left] "nav main" 400px [main-right]
-      [footer-top] "foot foot" 30px [footer-bottom]
+      [footer-top] "foot main" 30px [footer-bottom]
 
 }
   
@@ -66,7 +66,6 @@ nav{
     font-size: 15pt;
     font-weight: bold;
     border: 3px solid rgba(0,0,0, 0.8);
-    order: 5;
 }
 
 
@@ -82,12 +81,36 @@ h1 {
     font-size: 22mm;
   }
 
+.attendees_style{
+    font-size: large;
+}
+
+.attendees_style  > ul{
+    font-size: 0.9em;
+}
+
+#agenda > h2{
+    font-size: x-large;
+}
+
+#agenda > h2 > ul{
+    font-size: 0.9rem;
+}
 #recap {
     color: color-mix(in lch, plum, darkred );
 }
 
 form{
-    background-color: cornsilk
+    background-color: cornsilk;
+    border-bottom: 0.9cm solid rgb(237, 230, 203);
+    border-top: 0.9cm solid rgb(237, 230, 203);
+    border-left: 0.9cm solid rgb(237, 230, 203);
+    border-right: 0.9cm solid rgb(237, 230, 203);
+}
+
+.forForm{
+    background-color: cornsilk;
+    height: 80vh;
 }
 
 footer {
