--- a/style.css
+++ b/style.css
@@ -1,17 +1,3 @@
-@media (min-width: 500px) {
-    #page {
-        display: grid;
-        width: auto;
-        height: auto;
-        column-gap: 380px;
-        row-gap: 20px;
-        grid-template:
-            [header-left] "head main" 4.5em [header-right]
-            [main-left] "nav main" 400px [main-right]
-            [footer-top] "foot main" 30px [footer-bottom];
-    }
-}
-
 a:link {
     color: cornsilk;
 }
@@ -26,8 +12,12 @@ a:visited {
       url("jacquard24-regular-webfont.woff") format("woff");
     font-weight:999;
     font-style: normal;
-  }
+}
   
+/* Background color */
+body {
+    background-color: #a6bd9e;
+}
 
 * {
     margin: 0px;
@@ -35,21 +25,14 @@ a:visited {
     box-sizing: border-box;
     border-color: hsl(18, 72%, 17%);
 }
-  
-  
-/* Background color */
-body {
-    background-color: #a6bd9e;
-}
-
-header { 
-    position: fixed; 
-    color: hsl(18, 72%, 17%);
-    grid-area: head;
-}
 
 .header_H{
     font-size: 20pt;
+}
+
+header { 
+    color: hsl(18, 72%, 17%);
+    grid-area: head;
 }
 
 nav{
@@ -58,15 +41,12 @@ nav{
 
 /* flex box for navigation */
 .navigation {
-    position: fixed; 
-    top: 90px; 
-    z-index: 100;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     align-content: flex-start;
-    width:auto;
-    height: auto;
+    width: max-content;
+    height: max-content;
     margin: 5px;
     padding: 7px;
     border-width: 5px;
@@ -78,21 +58,56 @@ nav{
 .navigation_item {
     flex-shrink: 3;
     background-image: url('Untitled_Artwork.png');
+    max-width: auto;
     margin: 5px;
     padding: 10px;
+
     font-size: 15pt;
     font-weight: bold;
+
     border-width: 3px;
     border-style: solid;
     border-color: rgba(0,0,0, 0.8);
 }
+
+footer {
+    grid-area: foot;
+    text-align: center;
+    color: hsl(18, 72%, 17%);
+}
+
+@media (min-width: 500px) {
+    #page {
+        display: grid;
+        width: auto;
+        height: auto;
+        column-gap: 380px;
+        row-gap: 20px;
+        grid-template:
+            [header-left] "head main" 4.5em [header-right]
+            [main-left] "nav main" 400px [main-right]
+            [footer-top] "foot main" 30px [footer-bottom];
+    }
+    header { 
+        position: fixed; 
+    }
+    .navigation {
+        position: fixed; 
+        top: 90px; 
+    }
+    footer{
+        position: fixed;
+        top: 97vh; 
+    }
+    
+}
+
 
 
 main{
     grid-area: main;
     z-index: 200;
 }
-/* For the main heading */
 
 
 .attendees_style{
@@ -114,8 +129,6 @@ main{
     color: color-mix(in lch, plum, darkred );
 }
 
-
-
 form{
     background-color: cornsilk;
     border-radius: 0.7cm;
@@ -128,10 +141,4 @@ form{
     background-color: cornsilk;
 }
 
-footer {
-    grid-area: foot;
-    position: fixed;
-    top: 97vh; 
-    text-align: center;
-    color: hsl(18, 72%, 17%);
-}
+
