--- a/style.css
+++ b/style.css
@@ -159,10 +159,20 @@ button:hover {
     background-color: #e3a6bf;
 }
 
-img:hover{
+img:hover, video:active{
     display: block;
     background-color:cornsilk;
     padding: 10px 10px 10px 10px;
+}
+
+audio:active{
+    display: block;
+    background-color:cornsilk;
+    padding-top: 10px;
+    padding-right: 10px;
+    padding-left: 10px;
+    padding-bottom: 10px;
+    border-radius: 0.5in;
 }
 legend{
     font-size: larger;
