--- a/style.css
+++ b/style.css
@@ -120,7 +120,9 @@ main{
     z-index: 200;
 }
 
-
+img{
+    max-width: 200px;
+}
 .attendees_style{
     font-size: large;
     color: color-mix(in lch, rgb(243, 214, 243), rgb(236, 133, 133) );
