--- a/style.css
+++ b/style.css
@@ -214,6 +214,10 @@ legend{
     left: 340px;
 }
 
+h2{
+    color: rgb(234, 225, 189)
+}
+
 h2 + p {
     background-color: rgba(0, 0, 0, 0.526);
 }
@@ -239,7 +243,7 @@ table {
     border-collapse: collapse;
     width: 100%;
     tr:hover {
-        background-color: cornsilk;
+        background-color:  rgb(234, 225, 189)
     }
 }
   
