--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ form{
 
 }
 
-.forForm{
+fieldset{
     background-color: cornsilk;
 }
 
@@ -208,7 +208,7 @@ legend{
     padding: 5px;
 }
 
-.forForm > img{
+fieldset > img{
     position: absolute;
     top: 80px;
     left: 340px;
