--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ nav{
     margin-bottom: 5px;
     margin-right: 5px;
     margin-left: 5px;
-    padding: 7px;
+    padding: 7px 7px 7px 7px;
     border-width: 5px;
     border-style: solid;
     border-top-color: rgba(0,0,0, 0.3);
@@ -77,7 +77,7 @@ nav{
     font-size: 15pt;
     font-weight: bold;
 
-    border-width: 3px;
+    border-width: 3px 3px 3px 3px;
     border-style: solid;
     border-color: var(--background-border, black);
 }
@@ -95,10 +95,11 @@ footer {
         height: auto;
         column-gap: 380px;
         row-gap: 20px;
-        grid-template:
-            [header-left] "head main" 4.5em [header-right]
-            [main-left] "nav main" 400px [main-right]
-            [footer-top] "foot main" 30px [footer-bottom];
+        grid-template-areas: 
+            "head main"
+            "nav main" 
+            "foot main";
+        grid-template-rows: [header-left] 4.5em [header-right main-left] 400px [main-right footer-top] 30px [footer-bottom];    
     }
     header { 
         position: fixed; 
@@ -156,7 +157,7 @@ tr[class="here"] {
 form{
     margin:auto;
     background-color: cornsilk;
-    border-radius: 0.20cm 0.7cm 0.10cm 0.7cm;
+    border-radius: 0.20cm 0.7cm 0.20cm 0.7cm;
     border-style: solid solid solid solid;
     border-color: rgb(237, 230, 203);
     color: hsl(18, 72%, 17%);
@@ -236,12 +237,14 @@ p:has(+ a) {
 
 tr.absent{
     color: #f75c9d;
+    text-decoration:solid;
+    text-decoration-color: cornsilk;
 }
 
 table {
     border-collapse: collapse;
     width: 100%;
-    & tr:hover {
+    & tr:hover td {
         background-color:  rgba(234, 225, 189, 0.5);
     }
 }
